--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
               </ul>
             </li>
           </ul>
-          <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-            <ul class='login-list'>
-              <li><span class='login-link'>Вход</span>
+          <ul class='login-list'>
+            <li><span class='login-link'>Вход</span>
+              <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
                 <ul class='login-window'>
                   <li>
                     <label class="visually-hidden" for="user-email">Электронная почта</label>
@@ -54,12 +54,12 @@
                     <a class='login-problem' href='#'>Новая регистрация</a>
                   </li>
                 </ul>
-              </li>
-            </ul>
-          </form>
+              </form>
+            </li>
+          </ul>
           <ul class='backet-list'>
             <li>
-              <span class='basket'>Корзина</span>
+              <span class='basket'>Пусто</span>
             </li>
           </ul>
         </div>
