--- a/catalog.html
+++ b/catalog.html
@@ -27,38 +27,41 @@
           <ul class='search-list'>
             <li>
               <span class='search'>Поиск</span>
-              <ul class='search-window'>
-                <li>
-                  <input type='search' name='search' placeholder="Что ищем?">
-                </li>
-              </ul>
+              <form class='seacrh-form' action='https://echo.htmlacademy.ru' method="get">
+                <ul class='search-window'>
+                  <li>
+                    <input type='search' name='search' placeholder="Что ищем?">
+                  </li>
+                </ul>
+              </form>
             </li>
           </ul>
           <ul class='login-list'>
-            <li><span class='login-link'>Вход</span>
+            <li>
+              <span class='login-link'>Вход</span>
               <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
                 <ul class='login-window'>
-                  <li>
+                  <li class='login-field'>
                     <label class="visually-hidden" for="user-email">Электронная почта</label>
-                    <input class='login-field' type='email' name='email' id='user-email' placeholder="Электронная почта">
+                    <input type='email' name='email' id='user-email' placeholder="Электронная почта">
                   </li>
-                  <li>
+                  <li class='login-field'>
                     <label class="visually-hidden" for="user-password">Пароль</label>
-                    <input class='login-field' type='password' name='password' id='user-password' placeholder="Пароль">
+                    <input type='password' name='password' id='user-password' placeholder="Пароль">
                   </li>
-                  <li>
+                  <li class='sign-in'>
                     <button class='button' type='submit'>Войти</button>
                   </li>
-                  <li>
+                  <li class='login-password-info'>
                     <a class='login-problem' href='#'>Забыли пароль?</a>
                   </li> <!--Название login-problem не совсем подходит, но я хотел как то объединить эти кнопки, т.к у них одинаковое оформление-->
-                  <li>
+                  <li class='login-password-info'>
                     <a class='login-problem' href='#'>Новая регистрация</a>
                   </li>
                 </ul>
               </form>
             </li>
-          </ul>   
+          </ul>
           <ul class='basket-list'>
             <li>
               <span class='basket'>2 товара</span>
