--- a/index.html
+++ b/index.html
@@ -78,31 +78,32 @@
     </header>
     <main class='container'>
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1> <!--Добавил заголовки с классом "visually-hidden" для удобства разметки-->
+       <!--Не совсем уверен в правильности реализации radio-слайдера. Возможно его следует сделать внутри дива-->
+      <div class='slider-top' id='first-slide'>
+        <p>Крем-брюле и пломбир с малиновым джемом</p>
+        <img src='img/icecream-slide1.png' height="881" width='1045' alt='Крем-брюле и пломбир с малиновым джемом'>
+        <button type='submit' class='button' href='#'>Давайте оба!</button> <!--Не совсем понятен функционал кнопки (а ссылки) "Давайте оба". Склоняюсь к тому, что нопка доабвляет в корзину определенный вид мороженного -->
+      </div>
+      <div class='slider-top' id='second-slide'>
+        <p>Шоколадный пломбир и лимонный сорбет</p>
+        <img src='img/icecream-slide2.png' height='859' width='1065' alt='Шоколадный пломбир и лимонный сорбет'>
+        <button type='submit' class='button' href='#'>Давайте оба!</button>
+      </div>
+      <div class='slider-top' id='thrid-slide'>
+        <p>Пломбир с помадкой и клубничный щербет</p>
+        <img src='img/icecream-slide3.png' height="854" width='1079' alt='Пломбир с помадкой и клубничный щербет'>
+        <button  type='submit' class='button' href='#'>Давайте оба!</button>
+      </div>
       <form action='#' method='post'>
-        <div class='slider-top' id='first-slide'>
-          <p>Крем-брюле и пломбир с малиновым джемом</p>
-          <img src='img/icecream-slide1.png' height="881" width='1045' alt='Крем-брюле и пломбир с малиновым джемом'>
-          <a class='button' href='#'>Давайте оба!</a>
-          <label for='first'>
-            <input class='visually-hidden radio-slider' type='radio' name='slider' id='first' value='1' checked>
-          </label>
-        </div>
-        <div class='slider-top' id='second-slide'>
-          <p>Шоколадный пломбир и лимонный сорбет</p>
-          <img src='img/icecream-slide2.png' height='859' width='1065' alt='Шоколадный пломбир и лимонный сорбет'>
-          <a class='button' href='#'>Давайте оба!</a>
-          <label for='second'>
-            <input class='visually-hidden radio-slider' type='radio' name='slider' id='second' value='2'>
-          </label>
-        </div>
-        <div class='slider-top' id='thrid-slide'>
-          <p>Пломбир с помадкой и клубничный щербет</p>
-          <img src='img/icecream-slide3.png' height="854" width='1079' alt='Пломбир с помадкой и клубничный щербет'>
-          <a class='button' href='#'>Давайте оба!</a>
-          <label for='thrid'>
-            <input class='visually-hidden radio-slider' type='radio' name='slider' id='thrid' value='3'>
-          </label>
-        </div>
+        <label for='first'>
+          <input class='visually-hidden radio-slider' type='radio' name='slider' id='first' value='1' checked>
+        </label>
+        <label for='second'>
+          <input class='visually-hidden radio-slider' type='radio' name='slider' id='second' value='2'>
+        </label>
+        <label for='thrid'>
+          <input class='visually-hidden radio-slider' type='radio' name='slider' id='thrid' value='3'>
+        </label>
       </form>
       <section class='first-offers'>
         <h2 class='offers-caption'>Малинка даром!</h2>
