--- a/index.html
+++ b/index.html
@@ -235,26 +235,27 @@
         <fieldset>
           <legend class='visually-hidden'>Форма обратной связи</legend>
           <b>Мы обязательно вам ответим!</b>
-            <ul class='feedback-list'>
-              <li>
-                <span class='close'>х</span> <!--Не знаю, как задать закрытие высплывающего окна-->
-              </li>
-              <li>
-                <label class="visually-hidden" for="user-name">Имя</label>
-                <input type='text' name='your-name' class='feedback-contacts' id='user-name' placeholder="Как вас зовут?">
-              </li>
-              <li>
-                <label class="visually-hidden" for="feedback-email">Электронная почта</label>
-                <input type='email' name='email-feedback' class='feedback-contacts' id='feedback-email' placeholder="Ваша почта для ответа?">
-              </li>
-              <li>
-                <textarea class='feedback-comment' name='comment' id='comment-field' rows='5' placeholder="Напишите что-нибудь..."></textarea>
-              </li>
-              <li>
-                <button type='submit' class='button'>Отправить</button>
-              </li>
-            </ul>
+          <ul class='feedback-list'>
+            <li>
+              <span class='close'>х</span> <!--Не знаю, как задать закрытие высплывающего окна-->
+            </li>
+            <li>
+              <label class="visually-hidden" for="user-name">Имя</label>
+              <input type='text' name='your-name' class='feedback-contacts' id='user-name' placeholder="Как вас зовут?">
+            </li>
+            <li>
+              <label class="visually-hidden" for="feedback-email">Электронная почта</label>
+              <input type='email' name='email-feedback' class='feedback-contacts' id='feedback-email' placeholder="Ваша почта для ответа?">
+            </li>
+            <li>
+              <textarea class='feedback-comment' name='comment' id='comment-field' rows='5' placeholder="Напишите что-нибудь..."></textarea>
+            </li>
+            <li>
+              <button type='submit' class='button'>Отправить</button>
+            </li>
+          </ul>
         </fieldset>
+      </form>
     </div>
   </body>
 </html>
