--- a/catalog.html
+++ b/catalog.html
@@ -116,127 +116,129 @@
       </ul>
       <h1 class='main-caption'>Сливочное мороженое</h1>
       <div class='options'>
-        <p>
-           Соритровка<span class='select'>по-популярности</span>
-           Цена: 100 руб. - 500 руб.<span class='range'></span>
-           Жирность:<span class='radio'></span>
-        </p>                                         <!--В задании написано пока не делать кнопки. Сделал пока что так.-->
-        <p>
-          Наполнители: <span class='checkbox'>шоколадные сахарные присыпки фрукты сиропы джемы</span>
-          <span class='button'>Применить</span>
-        </p>
+        <form>
+          <p>
+            Соритровка<span class='select'>по-популярности</span>
+            Цена: 100 руб. - 500 руб.<span class='range'></span>
+            Жирность:<span class='radio'></span>
+          </p>                                         <!--В задании написано пока не делать кнопки. Сделал пока что так.-->
+          <p>
+            Наполнители: <span class='checkbox'>шоколадные сахарные присыпки фрукты сиропы джемы</span>
+            <span class='button'>Применить</span>
+          </p>
+        </form>
       </div>
-        <ul class='product-icecream'>
-            <li>
-              <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
-                <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
-                <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-02.jpg' width='267' height='267' alt='Сливочно-кофейное с кусочками шоколада'>
-                <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-03.jpg' width='267' height='267' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
-                <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-04.jpg' width='267' height='267' alt='Сливочное крем-брюле с карамальной подливкой'>
-                <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-05.jpg' width='267' height='267' alt='Сливочное с брусничным джемом'>
-                <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочное с брусничным джемом</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-06.jpg' width='267' height='267' alt='Сливочно-черничное с цельными ягодами черники'>
-                <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочно-черничное с цельными ягодами черники</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-07.jpg' width='267' height='267' alt='Сливочно-лимонное с карамельной присыпкой'>
-                <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочно-лимонное с карамельной присыпкой</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-08.jpg' width='267' height='267' alt='Сливочное c шоколадной стружкой'>
-                <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочное c шоколадной стружкой</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-09.jpg' width='267' height='267' alt='Сливочное-ванильное с кусочками шоколада'>
-                <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочно-ванильное с кусочками шоколада</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-10.jpg' width='267' height='267' alt='Сливочно c ментоловым сиропом'>
-                <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочное c ментоловым сиропом</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-11.jpg' width='267' height='267' alt='Сливочное с кусочками черного шоколада'>
-                <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочное с кусочками черного шоколада</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-            <li>
-              <a href='#' class='icecream'>
-                <img src='img/product-12.jpg' width='267' height='267' alt='Сливочное с мятным сиропом'>
-                <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
-                <h2 class='icecream-name'>Сливочное с мятным сиропом</h2>
-              </a>
-              <span class='button'>Быстрый просмотр</span>
-            </li>
-        </ul>
-    <ul class='pagination'>
-      <li>
-        <a href='' class="next"><span aria-hidden='true'>&laquo;</span></a>
-      </li>
-      <li><a href='catalog.html'>1</a></li>
-      <li><a href='catalog2.html'>2</a></li>
-      <li><a href='catalog3.html'>3</a></li>
-      <li><a href='catalog4.html'>4</a></li>
-      <li><a href='catalog5.html'>5</a></li>
-      <li>
-        <a href='' class="next"><span aria-hidden='true'>&raquo;</span></a>
-      </li>
-    </ul>
+      <ul class='product-icecream'>
+        <li>
+          <a href='#' class='icecream'> <!--Ширина и высота изображений задана предварительно-->
+            <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
+            <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-02.jpg' width='267' height='267' alt='Сливочно-кофейное с кусочками шоколада'>
+            <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-03.jpg' width='267' height='267' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
+            <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-04.jpg' width='267' height='267' alt='Сливочное крем-брюле с карамальной подливкой'>
+            <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-05.jpg' width='267' height='267' alt='Сливочное с брусничным джемом'>
+            <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочное с брусничным джемом</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-06.jpg' width='267' height='267' alt='Сливочно-черничное с цельными ягодами черники'>
+            <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочно-черничное с цельными ягодами черники</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-07.jpg' width='267' height='267' alt='Сливочно-лимонное с карамельной присыпкой'>
+            <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочно-лимонное с карамельной присыпкой</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-08.jpg' width='267' height='267' alt='Сливочное c шоколадной стружкой'>
+            <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочное c шоколадной стружкой</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-09.jpg' width='267' height='267' alt='Сливочное-ванильное с кусочками шоколада'>
+            <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочно-ванильное с кусочками шоколада</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-10.jpg' width='267' height='267' alt='Сливочно c ментоловым сиропом'>
+            <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочное c ментоловым сиропом</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-11.jpg' width='267' height='267' alt='Сливочное с кусочками черного шоколада'>
+            <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочное с кусочками черного шоколада</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+        <li>
+          <a href='#' class='icecream'>
+            <img src='img/product-12.jpg' width='267' height='267' alt='Сливочное с мятным сиропом'>
+            <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
+            <h2 class='icecream-name'>Сливочное с мятным сиропом</h2>
+          </a>
+          <span class='button'>Быстрый просмотр</span>
+        </li>
+      </ul>
+      <ul class='pagination'>
+        <li>
+          <a href='' class="next"><span aria-hidden='true'>&laquo;</span></a>
+        </li>
+        <li><a href='catalog.html'>1</a></li>
+        <li><a href='catalog2.html'>2</a></li>
+        <li><a href='catalog3.html'>3</a></li>
+        <li><a href='catalog4.html'>4</a></li>
+        <li><a href='catalog5.html'>5</a></li>
+        <li>
+          <a href='' class="next"><span aria-hidden='true'>&raquo;</span></a>
+        </li>
+      </ul>
     </main>
     <footer class='main-footer'>
         <ul class='social-list'>
