--- a/catalog.html
+++ b/catalog.html
@@ -43,11 +43,11 @@
                 <ul class='login-window'>
                   <li class='login-field'>
                     <label class="visually-hidden" for="user-email">Электронная почта</label>
-                    <input type='email' name='email' id='user-email' placeholder="Электронная почта">
+                    <input type='email' name='email' id='user-email' placeholder="Электронная почта" required>
                   </li>
                   <li class='login-field'>
                     <label class="visually-hidden" for="user-password">Пароль</label>
-                    <input type='password' name='password' id='user-password' placeholder="Пароль">
+                    <input type='password' name='password' id='user-password' placeholder="Пароль" required>
                   </li>
                   <li class='sign-in'>
                     <button class='button' type='submit'>Войти</button>
@@ -116,16 +116,58 @@
       </ul>
       <h1 class='main-caption'>Сливочное мороженое</h1>
       <div class='options'>
-        <form>
-          <p>
-            Соритровка<span class='select'>по-популярности</span>
-            Цена: 100 руб. - 500 руб.<span class='range'></span>
-            Жирность:<span class='radio'></span>
-          </p>                                         <!--В задании написано пока не делать кнопки. Сделал пока что так.-->
-          <p>
-            Наполнители: <span class='checkbox'>шоколадные сахарные присыпки фрукты сиропы джемы</span>
-            <span class='button'>Применить</span>
-          </p>
+        <form action='#' method='get'>
+          <fieldset>
+            <legend class='visually-hidden'>Критерии поиска</legend>
+            <p>
+              <label for='sorting'>Соритровка:</label>
+              <select name='sorting-type' id='sorting'>
+                <option value='popularity'>по-популярности</option>
+                <option value='inexpensive-first'>сначала недорогие</option>
+                <option value='expensive-first'>сначала дорогие</option>
+                <option value='fat-content'>по жирности</option>
+              </select>
+            </p>
+            <p>
+              <label for='price'>Цена: 100 руб. - 500 руб.</label><!--Не понял, как сделать 2 ползунка.-->
+              <input type='range' min='100' max='500' step='10' name='price' id='price'>
+            </p>
+            <p>
+              <span>Жирность:</span>
+              <label>
+                <input type='radio' name='fatness' value='0'><span>0%</span>
+              </label>
+              <label>
+                <input type='radio' name='fatness' value='10'><span>до 10%</span>
+              </label>
+              <label>
+                <input type='radio' name='fatness' value='30'><span>до 30%</span>
+              </label>
+              <label>
+                <input type='radio' name='fatness' value='>30'><span>выше 30%</span>
+              </label>
+            </p>
+            <p>
+              <span>Наполнители:</span>
+              <label for='chocolate'>
+                <input type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
+              </label>
+              <label for='sugar'>
+                <input type='checkbox' name='sugar-fillers' id='sugar' chea>href='#' сахарные присыпки
+              </label>a        <label for='fruit'>
+                <input type='checkbox' name='fruit-fillers' id='fruit'>фрукты
+              </label>
+              <label for='syrup'>
+                <input type='checkbox' name='syrup-fillers' id='syrup'>сироп
+              </label>
+              <label for='jam'>
+                <input type='checkbox' name='jam-fillers' id='jam'>джем
+              </label>
+            </p>
+            <p>
+              <button class='button' type='submit'>Применить</button>
+            </p>
+          </fieldset>
         </form>
       </div>
       <ul class='product-icecream'>
@@ -135,7 +177,7 @@
             <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -143,7 +185,7 @@
             <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-кофейное с кусочками шоколада</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -151,7 +193,7 @@
             <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-клубничное с присыпкой из белого шоколада</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -159,7 +201,7 @@
             <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное крем-брюле с карамальной подливкой</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -167,7 +209,7 @@
             <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с брусничным джемом</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -175,7 +217,7 @@
             <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-черничное с цельными ягодами черники</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -183,7 +225,7 @@
             <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-лимонное с карамельной присыпкой</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -191,7 +233,7 @@
             <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное c шоколадной стружкой</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -199,7 +241,7 @@
             <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочно-ванильное с кусочками шоколада</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -207,7 +249,7 @@
             <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное c ментоловым сиропом</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -215,7 +257,7 @@
             <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с кусочками черного шоколада</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
         <li>
           <a href='#' class='icecream'>
@@ -223,7 +265,7 @@
             <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>Сливочное с мятным сиропом</h2>
           </a>
-          <span class='button'>Быстрый просмотр</span>
+          <a href='#' class='button'>Быстрый просмотр</a>
         </li>
       </ul>
       <ul class='pagination'>
