Разметка личного проекта
Переоформлены чекбокс и радиобатон в списки

--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,7 @@
             <legend class='visually-hidden'>Критерии поиска</legend>
             <p>
               <label for='sorting'>Соритровка:</label>
-              <select name='sorting-type' id='sorting'>
+              <select class='visually-hidden' name='sorting-type' id='sorting'>
                 <option value='popularity'>по-популярности</option>
                 <option value='inexpensive-first'>сначала недорогие</option>
                 <option value='expensive-first'>сначала дорогие</option>
@@ -130,40 +130,59 @@
             </p>
             <p>
               <label for='price'>Цена: 100 руб. - 500 руб.</label><!--Не понял, как сделать 2 ползунка.-->
-              <input type='range' min='100' max='500' step='10' name='price' id='price'>
+              <input class='visually-hidden' type='range' min='100' max='500' step='10' name='price' id='price'>
             </p>
-            <p>
-              <span>Жирность:</span>
-              <label>
-                <input type='radio' name='fatness' value='0'><span>0%</span>
-              </label>
-              <label>
-                <input type='radio' name='fatness' value='10'><span>до 10%</span>
-              </label>
-              <label>
-                <input type='radio' name='fatness' value='30'><span>до 30%</span>
-              </label>
-              <label>
-                <input type='radio' name='fatness' value='>30'><span>выше 30%</span>
-              </label>
-            </p>
-            <p>
-              <span>Наполнители:</span>
-              <label for='chocolate'>
-                <input type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
-              </label>
-              <label for='sugar'>
-                <input type='checkbox' name='sugar-fillers' id='sugar' chea>href='#' сахарные присыпки
-              </label>a        <label for='fruit'>
-                <input type='checkbox' name='fruit-fillers' id='fruit'>фрукты
-              </label>
-              <label for='syrup'>
-                <input type='checkbox' name='syrup-fillers' id='syrup'>сироп
-              </label>
-              <label for='jam'>
-                <input type='checkbox' name='jam-fillers' id='jam'>джем
-              </label>
-            </p>
+            <span>Жирность:</span>
+            <ul>
+              <li>
+                <label>
+                  <input class='visually-hidden' type='radio' name='fatness' value='0'><span>0%</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class='visually-hidden' type='radio' name='fatness' value='10' checked><span>до 10%</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class='visually-hidden' type='radio' name='fatness' value='30'><span>до 30%</span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class='visually-hidden' type='radio' name='fatness' value='>30'><span>выше 30%</span>
+                </label>
+              </li>
+            </ul>
+            <span>Наполнители:</span>
+            <ul>
+              <li>
+                <label for='chocolate'>
+                  <input class='visually-hidden' type='checkbox' name='chocolate-fillers' id='chocolate' checked>шоколадные
+                </label>
+              </li>
+              <li>
+                <label for='sugar'>
+                  <input class='visually-hidden' type='checkbox' name='sugar-fillers' id='sugar' checked>сахарные присыпки
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input class='visually-hidden' type='checkbox' name='fruit-fillers' id='fruit'>фрукты
+                </label>
+              </li>
+              <li>
+                <label for='syrup'>
+                  <input class='visually-hidden' type='checkbox' name='syrup-fillers' id='syrup'>сироп
+                </label>
+              </li>
+              <li>
+                <label for='jam'>
+                  <input class='visually-hidden' type='checkbox' name='jam-fillers' id='jam'>джем
+                </label>
+              </li>
+            </ul>
             <p>
               <button class='button' type='submit'>Применить</button>
             </p>
